--- a/estilo.css
+++ b/estilo.css
@@ -63,7 +63,7 @@ nav.navbar-transparente {
 
 .texto-capa {
 	text-align: center;
-	color: white;
+	color: black;
 	display: table-cell;
 	vertical-align: middle;
 }
