--- a/estilo.css
+++ b/estilo.css
@@ -24,7 +24,7 @@ body {
 	height: 40px;
 	width: 132px;
 	display: block;
-	background: url('imagens/spotify.svg') no-repeat;
+	/*background: url('imagens/spotify.svg') no-repeat;*/
 	background-size: contain;
 	color: transparent;
 }
