--- a/estilo.css
+++ b/estilo.css
@@ -123,7 +123,9 @@ nav.navbar-transparente {
 footer {
 	background: #000;
 	padding: 50px 0px 20px 0px;
-	position: relative;
+	position:absolute;
+    	bottom:0;
+
 }
 
 .item-rede-social{
