--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,10 @@ html, body, .capa {
 	height: 100%;
 	overflow: auto;
 }
-
+.nav{
+    bottom:0;
+    width:100%;
+}
 body {
 	background: url('imagens/eng-ai.jpg'),
 				url('imagens/ruido.png'),
