--- a/estilo.css
+++ b/estilo.css
@@ -192,6 +192,8 @@ h3{
 	color: #919496;
 	font-size: 12px;
 	text-transform: uppercase;
+	bottom:0;
+    	width:100%;
 }
 
 #servicos h2, #servicos h3 {
