--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,7 @@ html, body, .capa {
 body {
 	background: url(#),
 			/*	url('imagens/ruido.png'),*/
-				linear-gradient(50deg,#ff4169,#7c26f8);
+			/*	linear-gradient(50deg,#ff4169,#7c26f8);*/
 	background-attachment: fixed;
 	font-family: Helvetica,Arial,sans-serif;
 	overflow-x: hidden;
