--- a/estilo.css
+++ b/estilo.css
@@ -8,14 +8,14 @@ html, body, .capa {
 	height: 100%;
 	overflow: auto;
 }
-/*body {
-	background: url(#),
+body {
+	/*background: url(#),*/
 			/*	url('imagens/ruido.png'),*/
 			/*	linear-gradient(50deg,#ff4169,#7c26f8);*/
 	background-attachment: fixed;
 	font-family: Helvetica,Arial,sans-serif;
 	overflow-x: hidden;
-}*/
+}
 
 /* -- Barra de navegação -- */
 .img-logo {
