--- a/estilo.css
+++ b/estilo.css
@@ -10,11 +10,11 @@ html, body, .capa {
 }
 body {
 	background: url(#),
-				url('imagens/ruido.png'),
+			/*	url('imagens/ruido.png'),*/
 			/*	linear-gradient(50deg,#ff4169,#7c26f8);*/
-	background-attachment: fixed;
-	font-family: Helvetica,Arial,sans-serif;
-	overflow-x: hidden;
+	/*background-attachment: fixed;*/
+	/*font-family: Helvetica,Arial,sans-serif;*/
+	/*overflow-x: hidden;*/
 }
 
 /* -- Barra de navegação -- */
