--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,7 @@ html, body, .capa {
 	overflow: auto;
 }
 body {
-	background: url(#),
+	background: url('imagens/eng-ai.jpg'),
 			/*	url('imagens/ruido.png'),*/
 			/*	linear-gradient(50deg,#ff4169,#7c26f8);*/
 	/*background-attachment: fixed;*/
