--- a/estilo.css
+++ b/estilo.css
@@ -98,11 +98,10 @@ nav.navbar-transparente {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
-#fundo-diversos {
-	background: white;
-}
+
+	
 #fundo-diversos{
-  background-image: url('imagens/mel.png');
+  background: #ff4169;
   background-position: right bottom;
   background-repeat: no-repeat;
   padding: 15px;
