--- a/estilo.css
+++ b/estilo.css
@@ -101,10 +101,11 @@ nav.navbar-transparente {
 
 	
 #fundo-diversos{
-  background: #ff4169;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  padding: 15px;
+  url('imagens/ruido.png'),
+	linear-gradient(50deg,#ff4169,#7c26f8);
+	background-attachment: fixed;
+	font-family: Helvetica,Arial,sans-serif;
+	overflow-x: hidden;
 }
 .albuns{
 	padding: 10px 0px 10px 0px;
