--- a/estilo.css
+++ b/estilo.css
@@ -101,7 +101,7 @@ nav.navbar-transparente {
 
 	
 #fundo-diversos{
-	background-color: hsla(89, 43%, 51%, 0.3);
+	background: white;
 }
 .albuns{
 	padding: 10px 0px 10px 0px;
