--- a/estilo.css
+++ b/estilo.css
@@ -101,7 +101,7 @@ nav.navbar-transparente {
 
 	
 #fundo-diversos{
-	background: white;
+	background: #660066;
 }
 .albuns{
 	padding: 10px 0px 10px 0px;
